# dual-arm-setup-RRC

./: .gitignore  .gitmodules  README.md  main.py  main_pipeline.py  pyproject.toml
client/: ffs_test.py  model_predict_test.py  webcam_sam_test.py
client/src/: ffs.py  model.py  sam.py
gripper/: dual_gripper_test.py  gripper_test.py
gripper/3d_printed_parts/: 2.mtl  base.stl  cover.3mf  cover.stl  gear.stl  gripper.blend  gripper_joined_tips.blend  gripper_joined_tips.blend1  gripper_joined_tips_forurdf.blend  gripper_joined_tips_forurdf.blend1  left_tip.stl  right_tip.stl
gripper/src/: gripper_controller.py
realsense/: realsense_aruco_test.py  realsense_test.py
realsense/src/: realsense_camera.py
server/: ffs_test.py  model_test.py  sam_test.py
xarm/: dual_arm_test.py  grasp_test.py  xarm_test.py
xarm/src/: xarm_controller.py  xarm_sim.py
