[project]
name = "real-life-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "pybullet>=3.2.7",
    "pyrealsense2>=2.57.7.10387",
    "requests>=2.34.2",
    "xarm-python-sdk>=1.17.3",
]
